--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "app-node-ts-template",
   "version": "0.0.1",
   "scripts": {
-    "watch-build": "webpack --watch",
-    "watch-compile": "tsc --watch",
-    "build-prod": "webpack --config webpack.prod.js",
+    "watch:webpack": "webpack --watch",
+    "watch:sass": "sass --watch --update --style=expanded scss:dist",
+    "build-prod:sass": "sass --no-source-map --style=compressed scss:dist",
+    "build-prod:webpack": "webpack --config webpack.prod.js",
+    "build-prod": "run-p build-prod:*",
     "serve": "browser-sync start --server -w",
-    "start": "run-p watch-build serve"
+    "start": "run-p watch:* serve"
   },
   "devDependencies": {
     "browser-sync": "^2.27.10",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.56.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
